media/center-console/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: center-console
  labels:
    app: center-console
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: center-console
  template:
    metadata:
      labels:
        app: center-console
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8501"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: center-console
        image: 192.168.50.2:5050/media/center-console:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 8501
      imagePullSecrets:
      - name: gitlab-registry
