media/center-console/base/service.yaml
# center-console/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: center-console
spec:
  type: NodePort
  ports:
  - port: 8501
    targetPort: 8501
  selector:
    app: center-console
