media/center-console/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: center-console-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: console.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: center-console
                port:
                  number: 8501
